--- a/templates/master.erb
+++ b/templates/master.erb
@@ -182,7 +182,11 @@ minion_data_cache: <%= @master_minion_data_cache %>
 
 # Enable auto_accept, this setting will automatically accept all incoming
 # public keys from the minions. Note that this is insecure.
+<% if @master_auto_accept -%>
+auto_accept: <%= @master_auto_accept %>
+<% else -%>
 #auto_accept: False
+<% end -%>
 
 # If the autosign_file is specified only incoming keys specified in
 # the autosign_file will be automatically accepted. This is insecure.
