--- a/templates/grains.erb
+++ b/templates/grains.erb
@@ -3,6 +3,13 @@ facter:
 scope.compiler.topscope.to_hash.reject do |k,v|
   k.to_s =~ /(uptime.*|last_run|timestamp|(memory|swap)free|ssh*)/ or ! v.is_a?(String)
 end.sort.each do |fact| -%>
-  <%= fact[0] -%>: 
+  <%= fact[0] -%>:
     - <%= fact[1] %>
 <% end %>
+<% if @minion_grains -%>
+<% @minion_grains.each do |key, value| -%>
+<% if value.is_a?(String) -%>
+<%= key -%>: <%= value %>
+<% end -%>
+<% end -%>
+<% end -%>
